--- a/irods/irods-base/Dockerfile.ubuntu
+++ b/irods/irods-base/Dockerfile.ubuntu
@@ -48,8 +48,9 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     unixodbc \
     jq \
     wget \
-    curl
-
+    curl \
+    git
+    
 # Install iRODS packages (APT)
 ENV IRODS_VERSION ${ENV_IRODS_VERSION}
 RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | sudo apt-key add - \
