Bring new changes to irods containers from develop into new irods-base
This brings in all the changes that have happened in develop for irods
containers since we (DHDO-163 / irods-base) branched off develop. But
only for files under irods/

Rest of changes will be brought in when doing merging develop into this
(DHDO-163 / irods-base) branch.

Namely:
    adc7482 (tag: v3.18.0) Added missing pipe for S3 bootstrap_irods.sh
    e1f5137 Update of users. Remove kheinen and rravelli. Added tlustberg [DHS-1846]
    b02c19c Add git as installable in iRODS packages [DHS-1846]
    9b4f468 Added policies ruleset to server_config.json [DHS-1844, DHS-1845]
    694b8cd Remove service-dropzones from dev [DHDO-410]
    e6a810a Changed location of webdav upload to ires [DHS-2201,DHS-1845]
    78905ee Added davrods write container and webdav upload irods resource [DHS-2178, DHS-2201,DHS-1845]
    1d663c8 Merge branch 'develop' into release/customizable_metadata
    5647a71 Add DataHub_extended_schema for projects in ires bootstrap_irods.sh [DHS-2064, DHS-2090]
    5373fee (origin/DHDO-243) Install python-tz on build [DHDO-243]
    60dbae0 Merge pull request #75 from MaastrichtUniversity/DHS-1823
    8fc4ac5 No longer use the old createProject.r rule in bootstrap_irods
    543bf3d (origin/DHS-1823) Add enableContributorEditMetadata AVU for hardcoded projects [DHS-1823]
    1121679 Changed MDR handle URL env variable to correct RIT_ENV host
    c849857 Merge remote-tracking branch 'origin/DHS-1824' into DHS-1839
    4e4ec6d Merge branch 'develop' into DHS-1824
    14e869b Refactored template to schema [DHS-1824, DHS-1980]
    13d07f5 Merge pull request #69 from MaastrichtUniversity/DHS-1822
    e0837cf Added new env variables for epicpid, removed mirth env variables [DHS-1839, DHS-1977]
    6ac053a Merge branch 'develop' into DHS-1839
    70128f7 Update createProject.r calls in */bootstrap_irods.sh [DHS-1822, DHS-1923]

Except for:
    f8ad232 Switched to German Ubuntu mirror, because

--- a/irods/irods-base/Dockerfile.centos
+++ b/irods/irods-base/Dockerfile.centos
@@ -38,12 +38,14 @@ RUN yum install -y \
     python-requests \
     python-jsonschema \
     python-ldap \
+    python-tz \
     lsof \
     fortune-mod \
     nano \
     cifs-utils  \
     openssl \
     curl \
+    jq \
     # packages required for building ruleset and microservices {{
     openssl-devel \
     libcurl-devel \
@@ -53,7 +55,7 @@ RUN yum install -y \
     cmake3 \
     python-pip \
     git
-    # }} end 
+    # }} end
 
 ENV IRODS_VERSION ${ENV_IRODS_VERSION}
 RUN rpm --import https://packages.irods.org/irods-signing-key.asc \
