Fix typo in .env [DHDO-425]

--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ ENV_METALNX_POSTGRES_VERSION=11
 ENV_MYSQL_VERSION=5.6
 ## Note: postgres version is also used by irods (icat) container
 ENV_POSTGRES_VERSION=11.15
-ENV_POSTGRES_CLIENT=11
+ENV_POSTGRES_CLIENT_VERSION=11
 
 # Other (used in various containers)
 ENV_DOCKERIZE_VERSION=v0.2.0
