--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 
 # Load build arguments from environment
 ARG ENV_POSTGRES_CLIENT_VERSION
@@ -18,12 +18,12 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1de.\2/" /etc/a
     libfuse2 \
     libjson-perl \
     librabbitmq-dev \
-    python \
-    python-psutil \
-    python-requests \
-    python-jsonschema \
-    python-ldap \
-    python-tz \
+    python3 \
+    python3-psutil \
+    python3-requests \
+    python3-jsonschema \
+    python3-ldap \
+    python3-tz \
     sudo \
     lsof \
     fortune-mod \
@@ -37,7 +37,7 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1de.\2/" /etc/a
     g++ \
     make \
     cmake \
-    python-pip \
+    python3-pip \
     git
     # }} end
 
@@ -46,7 +46,7 @@ ARG ENV_POSTGRES_VERSION
 
 # Make sure to use the same postgres version for client and irods-db server
 RUN wget -qO - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - \
-    && echo 'deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main' | sudo tee /etc/apt/sources.list.d/pgdg.list \
+    && echo 'deb http://apt.postgresql.org/pub/repos/apt/ focal-pgdg main' | sudo tee /etc/apt/sources.list.d/pgdg.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     postgresql-client-${ENV_POSTGRES_CLIENT_VERSION} \
@@ -63,7 +63,7 @@ ARG ENV_FILEBEAT_VERSION
 ENV IRODS_VERSION ${ENV_IRODS_VERSION}
 ENV IRODS_PYTHON_PLUGIN_VERSION ${ENV_IRODS_PYTHON_PLUGIN_VERSION}
 RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | apt-key add - \
-    && echo "deb [arch=amd64] https://packages.irods.org/apt/ bionic main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
+    && echo "deb [arch=amd64] https://packages.irods.org/apt/ focal main" | sudo tee /etc/apt/sources.list.d/renci-irods.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     irods-server=${IRODS_VERSION} \
@@ -74,10 +74,11 @@ RUN wget -qO - https://packages.irods.org/irods-signing-key.asc | apt-key add - 
     # packages required for building microservices
     irods-externals-clang-runtime${ENV_IRODS_EXT_CLANG_RUNTIME_VERSION} \
     irods-externals-clang${ENV_IRODS_EXT_CLANG_VERSION} \
-    irods-externals-jansson2.7-0 \
-    irods-externals-json3.7.3-0 \
+    irods-externals-json3.10.4-0 \
     # packages required for python rule engine
-    irods-rule-engine-plugin-python${IRODS_PYTHON_PLUGIN_VERSION}
+    irods-rule-engine-plugin-python${IRODS_PYTHON_PLUGIN_VERSION} \
+    irods-externals-boost1.78.0-0 \
+    nlohmann-json3-dev
 
 # install Metalnx RMD
 ADD ./emc-metalnx-rmd-1.0-1.deb /tmp/emc-metalnx-rmd-1.0-1.deb
@@ -99,6 +100,7 @@ ADD ./prepend_ruleset.py /opt/irods/prepend_ruleset.py
 ADD ./add_rule_engine.py /opt/irods/add_rule_engine.py
 ADD ./add_env_var.py /opt/irods/add_env_var.py
 ADD ./add_ssl_setting_at_setup.patch /opt/irods/add_ssl_setting_at_setup.patch
+ADD ./icat_config.json /opt/irods/icat_config.json
 
 # SSL
 ADD ./SSL /etc/irods/SSL
@@ -117,6 +119,7 @@ ADD ./genquery.py /etc/irods/genquery.py
 RUN ln -s /usr/include/locale.h /usr/include/xlocale.h
 
 RUN chmod a+x /opt/irods/*
+RUN sed -i '/imklog/s/^/#/' /etc/rsyslog.conf
 
 EXPOSE 1248 1247 8000
 VOLUME [ "/rules", "/helpers", "/microservices" ]
