--- a/.env
+++ b/.env
@@ -32,7 +32,8 @@ ENV_METALNX_POSTGRES_VERSION=11
 # For containers that use docker images
 ENV_MYSQL_VERSION=5.6
 ## Note: postgres version is also used by irods (icat) container
-ENV_POSTGRES_VERSION=9.4
+ENV_POSTGRES_VERSION=11.16
+ENV_POSTGRES_CLIENT_VERSION=11
 
 # Other (used in various containers)
 ENV_DOCKERIZE_VERSION=v0.2.0
