--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -52,7 +52,7 @@ services:
         - ENV_REGISTRY_HOST        # Used to find base image
         - ENV_BRANCH               # Used to find base image
         - ENV_IRODS_VERSION
-        - ENV_POSTGRES_VERSION
+        - ENV_POSTGRES_CLIENT_VERSION
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/icat:${ENV_TAG}
     depends_on:
       - irods-base-ubuntu          # Build-only dependency, but doesn't work with `docker build`
