--- a/irods/icat/Dockerfile
+++ b/irods/icat/Dockerfile
@@ -3,7 +3,8 @@ ARG ENV_REGISTRY_HOST
 ARG ENV_BRANCH
 FROM ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/irods-base:ubuntu
 
-ARG ENV_POSTGRES_VERSION
+# Load build arguments from environment
+ARG ENV_POSTGRES_CLIENT_VERSION
 ARG ENV_IRODS_VERSION
 
 # Make sure to use the same postgres version for client and irods-db server
@@ -11,7 +12,7 @@ RUN wget -qO - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add 
     && echo 'deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main' | sudo tee /etc/apt/sources.list.d/pgdg.list \
     && apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    postgresql-client-${ENV_POSTGRES_VERSION} \
+    postgresql-client-${ENV_POSTGRES_CLIENT_VERSION} \
     odbc-postgresql \
     irods-database-plugin-postgres=${ENV_IRODS_VERSION}
 
