--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -71,7 +71,7 @@ services:
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
-      DEBUG_DH_BOOTSTRAP: yes
+      DEBUG_DH_BOOTSTRAP:  "yes"
     networks:
       default:
         aliases:
@@ -111,7 +111,7 @@ services:
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
-      DEBUG_DH_BOOTSTRAP: yes
+      DEBUG_DH_BOOTSTRAP:  "yes"
     networks:
       default:
         aliases:
@@ -132,7 +132,7 @@ services:
 
   ires-s3-1:
     build:
-      context: ires-s3/
+      context: irods/ires-s3/
       dockerfile: Dockerfile
       args:
         - ENV_REGISTRY_HOST        # Used to find base image
@@ -159,7 +159,7 @@ services:
       ENV_S3_SECRET_KEY: ${ENV_S3_SECRET_KEY1}
       ENV_S3_RESC_NAME: "UM-Ceph-S3-AC"
       ENV_S3_HOST: "minio1.dh.local:9000"
-      DEBUG_DH_BOOTSTRAP: yes
+      DEBUG_DH_BOOTSTRAP:  "yes"
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
@@ -179,7 +179,7 @@ services:
     # This is not nice.. there should only be once place where building
     # procedure is defined for the same image
     build:
-      context: ires-s3/
+      context: irods/ires-s3/
       dockerfile: Dockerfile
       args:
         - ENV_REGISTRY_HOST        # Used to find base image
@@ -206,7 +206,7 @@ services:
       ENV_S3_SECRET_KEY: ${ENV_S3_SECRET_KEY2}
       ENV_S3_RESC_NAME: "UM-Ceph-S3-GL"
       ENV_S3_HOST: "minio2.dh.local:9000"
-      DEBUG_DH_BOOTSTRAP: yes
+      DEBUG_DH_BOOTSTRAP:  "yes"
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./irods.secrets.cfg:/etc/secrets:ro
@@ -224,7 +224,7 @@ services:
 
   ires-centos:
     build:
-      context: ires-centos/
+      context:  irods/ires-centos/
       dockerfile: Dockerfile
       args:
         - ENV_REGISTRY_HOST        # Used to find base image
@@ -244,7 +244,7 @@ services:
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
       MDR_HANDLE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
       LOGSPOUT: ignore  #ignore, because logs are forwarded by filebeat (in production it's not in a docker container)
-      DEBUG_DH_BOOTSTRAP: yes
+      DEBUG_DH_BOOTSTRAP:  "yes"
     networks:
       default:
         aliases:
