Make irods temp password lifetime dynamic with environment variable [DHS-2489, DHS-2250]

--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -66,6 +66,7 @@ services:
       PGPASSWORD: foobar
       VIRTUAL_HOST: irods.${RIT_ENV}.rit.unimaas.nl
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
+      IRODS_TEMP_PASSWORD_LIFETIME: ${ENV_IRODS_TEMP_PASSWORD_LIFETIME}
       EPICPID_URL: ${ENV_EPICPID_URL}
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
@@ -105,6 +106,7 @@ services:
       PGPASSWORD: foobar
       VIRTUAL_HOST: irods.${RIT_ENV}.rit.unimaas.nl
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
+      IRODS_TEMP_PASSWORD_LIFETIME: ${ENV_IRODS_TEMP_PASSWORD_LIFETIME}
       EPICPID_URL: ${ENV_EPICPID_URL}
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
@@ -148,6 +150,7 @@ services:
       RODS_PASSWORD: irods
       VIRTUAL_HOST: ires-s3-1.${RIT_ENV}.rit.unimaas.nl
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
+      IRODS_TEMP_PASSWORD_LIFETIME: ${ENV_IRODS_TEMP_PASSWORD_LIFETIME}
       EPICPID_URL: ${ENV_EPICPID_URL}
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
@@ -194,6 +197,7 @@ services:
       RODS_PASSWORD: irods
       VIRTUAL_HOST: ires-s3-2.${RIT_ENV}.rit.unimaas.nl
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
+      IRODS_TEMP_PASSWORD_LIFETIME: ${ENV_IRODS_TEMP_PASSWORD_LIFETIME}
       EPICPID_URL: ${ENV_EPICPID_URL}
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
@@ -235,6 +239,7 @@ services:
       RODS_PASSWORD: irods
       VIRTUAL_HOST: ires-centos.${RIT_ENV}.rit.unimaas.nl
       IRODS_INGEST_REMOVE_DELAY: ${ENV_IRODS_INGEST_REMOVE_DELAY}
+      IRODS_TEMP_PASSWORD_LIFETIME: ${ENV_IRODS_TEMP_PASSWORD_LIFETIME}
       EPICPID_URL: ${ENV_EPICPID_URL}
       EPICPID_USER: ${ENV_EPICPID_USER}
       EPICPID_PASSWORD: ${ENV_EPICPID_PASSWORD}
