--- a/irods/ingest_framework/Dockerfile
+++ b/irods/ingest_framework/Dockerfile
@@ -4,18 +4,21 @@ ARG PIP_PACKAGE="irods-capability-automated-ingest"
 
 RUN pip install ${PIP_PACKAGE}
 
-COPY ./config/irods_environment.json /
+RUN mkdir -p /var/lib/irods
+
+COPY ./config/irods_environment.json /var/lib/irods/irods_environment.json
+COPY ./scripts/event_handler.py /var/lib/irods/event_handler.py
 
 ADD ./test-dev-ssl-certs/test_only_dev_irods_dh_ca_cert.pem /tmp/test_only_dev_irods_dh_ca_cert.pem
 
 # SSL Patch required for our Setup against the irods ingest framework
-ADD ./patch/Update_ssl_settings.patch /tmp/Update_ssl_settings.patch
+ADD ./patch/Update_ssl_settings.patch /var/lib/irods/Update_ssl_settings.patch
 
 RUN echo "Adding custom DataHub iRODS-CA-certificate to the CA-rootstore (FOR DEV & TEST ONLY!)..." ; \
         cp /tmp/test_only_dev_irods_dh_ca_cert.pem /usr/local/share/ca-certificates/test_only_dev_irods_dh_ca_cert.crt ; \
         update-ca-certificates
 
-RUN patch /usr/local/lib/python3.10/site-packages/irods_capability_automated_ingest/sync_irods.py /tmp/Update_ssl_settings.patch
+RUN patch /usr/local/lib/python3.10/site-packages/irods_capability_automated_ingest/sync_irods.py /var/lib/irods/Update_ssl_settings.patch
 
 ENTRYPOINT ["irods_capability_automated_ingest"]
 CMD ["-h"]
