Add flask app to show how to start ingest framework trough API. See irods/ingest_framework/README.md on how to use [DHS-2465, DHS-2438]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
   redis:
       image: redis:4.0.8
       hostname: ingest-redis
+      ports:
+         - "6379:6379"
       networks:
         default:
           aliases:
