--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -1,4 +1,5 @@
-version: '2'
+# Compose Spec: https://github.com/compose-spec/compose-spec/blob/master/spec.md
+
 services:
   # This service definition is meant for *build* purposes only!
   irods-base-ubuntu:
