--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
-version: '2'
+# Compose Spec: https://github.com/compose-spec/compose-spec/blob/master/spec.md
+
+# Can be overridden via env var COMPOSE_PROJECT_NAME
+name: dh-dev
+
 services:
   mdr:
     build:
