Add event handler to flask. Add error handling to flask. Update ingest framework README.md [DHS-2465, DHS-2438]

--- a/irods/ingest_framework/Dockerfile
+++ b/irods/ingest_framework/Dockerfile
@@ -1,5 +1,10 @@
 FROM python:3.10
 
+# install packages for this iRES
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    nano
+
 ARG PIP_PACKAGE="irods-capability-automated-ingest"
 
 RUN pip install ${PIP_PACKAGE}
@@ -13,12 +18,15 @@ ADD ./test-dev-ssl-certs/test_only_dev_irods_dh_ca_cert.pem /tmp/test_only_dev_i
 
 # SSL Patch required for our Setup against the irods ingest framework
 ADD ./patch/Update_ssl_settings.patch /var/lib/irods/Update_ssl_settings.patch
+ADD ./patch/Add_failure_check.patch /var/lib/irods/Add_failure_check.patch
+
 
 RUN echo "Adding custom DataHub iRODS-CA-certificate to the CA-rootstore (FOR DEV & TEST ONLY!)..." ; \
         cp /tmp/test_only_dev_irods_dh_ca_cert.pem /usr/local/share/ca-certificates/test_only_dev_irods_dh_ca_cert.crt ; \
         update-ca-certificates
 
 RUN patch /usr/local/lib/python3.10/site-packages/irods_capability_automated_ingest/sync_irods.py /var/lib/irods/Update_ssl_settings.patch
+RUN patch /usr/local/lib/python3.10/site-packages/irods_capability_automated_ingest/sync_actions.py /var/lib/irods/Add_failure_check.patch
 
 ENTRYPOINT ["irods_capability_automated_ingest"]
 CMD ["-h"]
