Add iCAT docker health check
We are experimenting with this feature.

We pretend to use them to control start up sequence, but they are
limited and probably not really meant for that purpose.

`depends_on` health status does not seem to be supported by version 3 of
docker-compose, but it is supported by the now recommended Compose Spec.

--- a/irods/icat/Dockerfile
+++ b/irods/icat/Dockerfile
@@ -36,6 +36,8 @@ ADD ./test-dev-ssl-certs/* /etc/irods/SSL/
 # bootstrap scripts to build our development iCAT
 ADD ./scripts/* /opt/irods/
 
+HEALTHCHECK --interval=10s --timeout=10s --start-period=20s CMD su irods -c /opt/irods/check_health.sh
+
 EXPOSE 1248 1247 8000
 VOLUME [ "/rules", "/helpers", "/microservices" ]
 # will install iRODS on start of container
