--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -100,7 +100,8 @@ services:
         - ENV_DOCKERIZE_VERSION
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/ires:${ENV_TAG}
     depends_on:
-      - irods
+      irods:
+        condition: service_healthy
     hostname: ires.dh.local
     environment:
       RODS_PASSWORD: irods
