Add healthcheck for ires
[DHDO-426]

--- a/irods/ires/Dockerfile
+++ b/irods/ires/Dockerfile
@@ -3,9 +3,6 @@ ARG ENV_REGISTRY_HOST
 ARG ENV_BRANCH
 FROM ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/irods-base:ubuntu
 
-# Load build arguements from environment
-ARG ENV_DOCKERIZE_VERSION
-
 # install packages for this iRES
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
@@ -14,10 +11,6 @@ RUN apt-get update && \
 # Overwrite the default setcifsacl with our own recompiled version
 ADD ./patch/setcifsacl /usr/bin/setcifsacl
 RUN chmod a+x /usr/bin/setcifsacl
-
-# Dockerize install
-RUN curl -fSL https://github.com/jwilder/dockerize/releases/download/${ENV_DOCKERIZE_VERSION}/dockerize-linux-amd64-${ENV_DOCKERIZE_VERSION}.tar.gz -o dockerize-linux-amd64-${ENV_DOCKERIZE_VERSION}.tar.gz \
-    && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-${ENV_DOCKERIZE_VERSION}.tar.gz
 
 # Add config
 ADD ./config/irods/* /etc/irods/
@@ -30,5 +23,7 @@ ADD ./test-dev-ssl-certs/* /etc/irods/SSL/
 # Add bootstrap scripts
 ADD ./scripts/* /opt/irods/
 
+HEALTHCHECK --interval=30s --timeout=10s --start-period=20s CMD su irods -c /opt/irods/check_health.sh
+
 EXPOSE 1248 1247 8000
-CMD ["dockerize", "-wait", "tcp://irods.dh.local:1247", "-timeout", "200s", "/opt/irods/bootstrap.sh"]
+CMD ["/opt/irods/bootstrap.sh"]
