Add authentication to elasticsearch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -374,6 +374,8 @@ services:
     environment:
       discovery.type: single-node
       ES_JAVA_OPTS: -Xms512m -Xmx512m
+      ELASTIC_PASSWORD: foobar
+      xpack.security.enabled: "true"
     ports:
         - "9200:9200"
     networks:
