--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -328,8 +328,12 @@ services:
         - SSL_ENV=${RIT_ENV}          # Whether to add our own CA-certificate to the CA-rootstore
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/sram-sync:${ENV_TAG}
     depends_on:
-      - irods
-      - ldap
+      keycloak:
+        condition: service_healthy
+      irods:
+        condition: service_healthy
+      ldap:
+        condition: service_started
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./externals/sram-sync/:/opt/app
