Elasticsearch password as env variable

--- a/.env
+++ b/.env
@@ -48,3 +48,6 @@ ENV_S3_SECRET_KEY2=BCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOP
 ENV_EPICPID_URL=http://epicpid.dh.local/epic/21.T12996/
 ENV_EPICPID_USER=user
 ENV_EPICPID_PASSWORD=foobar
+
+# elastic
+ENV_ELASTIC_PASSWORD=foobar
