MDR now depends_on elasticsearch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     depends_on:
       - keycloak
       - mdr-db
+      - elasticsearch
     env_file:
       - irods.secrets.cfg # Using ONLY BIOPORTAL_API_KEY
     environment:
